--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,11 +1,38 @@
 .App {
     --header_height: 60px;
+    max-width: 1280px;
+}
+
+.hw1 {
+    /*position: absolute;*/
+    margin: 131px 70px 0 70px;
+    font-family: 'Montserrat', serif;
+    font-style: normal;
+    line-height: 20px;
+    font-weight: 600;
+    color: #000000;
 }
 
 .hw {
-
+    /*width: 1280px;*/
+    /*height: 373px;*/
+    /*left: 0px;*/
+    /*top: 131px;*/
 }
 
 .hwTitle {
+    height: 27px;
+    width: 165px;
+    left: 70px;
+    top: 131px;
 
+    font-size: 22px;
+    line-height: 27px;
+    color: #000000;
+}
+
+.line {
+    border: 1px solid grey;
+    width: 1280px;
+    margin-left: -70px;
 }
