--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,31 +1,70 @@
 .friendMessage {
-
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    height: min-content;
+    margin: 47px 0;
 }
 
 .friendImageAndText {
-
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: flex-end;
+    width: 462px;
+    left: 70px;
 }
 
 .friendImageAndText img {
-
+    width: 48px;
+    height: 48px;
+    margin-left: 15px;
 }
 
 .friendText {
-
+    background: #0066CC;
+    box-shadow: 0px 5px 20px rgba(38, 29, 29, 0.03), 0px 1px 2px rgba(38, 29, 29, 0.1);
+    border-radius: 20px;
+    padding: 8px 13px;
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
 
 .friendText:after {
-
+    content: "";
+    position: absolute;
+    margin-right: -28px;
+    margin-bottom: -8px;
+    margin-left: 77px;
+    border-left: 15px solid transparent;
+    border-right: 18px solid transparent;
+    border-bottom: 12px solid #0066CC;
+    filter: drop-shadow(2px 1px 1px rgba(29, 33, 38, 0.1));
+    transform: rotate(360deg);
 }
 
 .friendName {
-
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .friendMessageText {
-
+    display: block;
+    max-width: 300px;
+    word-break: break-word;
+    font-weight: 400;
 }
 
 .friendTime {
-
+    height: 12px;
+    margin-right: 12px;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 12px;
+    font-style: normal;
 }
