--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,31 +1,61 @@
 .message {
-
+    display: flex;
+    flex-direction: column;
+    max-width: 462px;
+    height: min-content;
+    margin: 47px 0;
 }
 
 .imageAndText {
-
+    display: flex;
+    align-items: flex-end;
+    width: 462px;
 }
 
 .imageAndText img {
-
+    width: 48px;
+    height: 48px;
+    margin-right: 15px;
 }
 
 .text {
-
+    background: #F5F7FB;
+    box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03),0px 1px 2px rgba(29, 33, 38, 0.1);
+    border-radius: 20px;
+    padding: 8px 13px;
 }
 
 .text:after {
-
+    content: "";
+    position: absolute;
+    margin-top: -4px;
+    margin-left: -26px;
+    border-left: 18px solid transparent;
+    border-right: 11px solid transparent;
+    border-bottom: 12px solid #F5F7FB;
+    filter: drop-shadow(-2px 1px 1px rgba(29, 33, 38, 0.1));
+    transform: rotate(360deg);
 }
 
 .name {
-
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
 }
 
 .messageText {
-
+    display: block;
+    max-width: 300px;
+    word-break: break-word;
+    font-weight: 400;
 }
 
 .time {
-
+    width: 29px;
+    height: 12px;
+    left: 80px;
+    margin-left: 12px;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 12px;
 }
