--- a/src/s2-homeworks/hw02/affairs/affair/Affair.module.css
+++ b/src/s2-homeworks/hw02/affairs/affair/Affair.module.css
@@ -13,6 +13,12 @@
     justify-content: center;
     width: 145px;
     height: 37px;
+    font-family: 'Montserrat', serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    text-transform: uppercase;
 }
 
 .closeButton {
