--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -1,34 +1,75 @@
 .greetingForm {
 }
 
+
 .inputAndButtonContainer {
+    display: flex;
 }
 
 .error {
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #CC0000;
+
 }
 
 .input {
+    border: 1px solid #D1D1D1;
+}
+input {
+    min-width: 372px;
+    height: 36px;
+    border-radius: 5px;
+    margin: 0 12px 7px 0;
+}
+
+input:focus {
+    outline: none;
 }
 
 .input:focus {
+    outline: none;
 }
 
 .errorInput {
+    border: 1px solid red;
 }
 
 .button {
+    width: 78px;
+    height: 36px;
+    background: #0066CC;
+    border-radius: 3px;
+    color: #fff;
+    border: none;
+
 }
 
 .button:focus {
+
+
 }
 
 .button:active {
 }
 
 .button:disabled {
+    background: #0066CC;
+    opacity: 0.5;
+
 }
 
 .text {
+    color: rgba(0, 0, 0, 0.5);
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 9px;
 }
 
 .greeting {
