--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -3,7 +3,7 @@
     max-width: 1280px;
 }
 
-.hw1 , .hw2{
+.hw1 , .hw2, .hw3{
     /*position: absolute;*/
     margin: 131px 70px 0 70px;
     font-family: 'Montserrat', serif;
@@ -14,6 +14,13 @@
 }
 
 .hw2 {
+    margin-top: 20px;
+}
+.hw2Container, .hw3Container {
+    margin-bottom: 73px;
+}
+
+.hw3 {
     margin-top: 20px;
 }
 
