hw4 inputs, buttons and styled checkboxes

--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -16,10 +16,10 @@
 
 .button {
     border: none;
-margin-left: 44px;
+    margin-left: 44px;
     background-color: #0066CC;
     height: 40px;
-    width: 120px;
+    min-width: 120px;
     border-radius: 20px;
     color: #FFFFFF;
 
