--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -9,7 +9,8 @@
 .imageAndText {
     display: flex;
     align-items: flex-end;
-    width: 462px;
+    min-width: 250px;
+    /*width: 462px;*/
 }
 
 .imageAndText img {
