--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -3,7 +3,7 @@
     max-width: 1280px;
 }
 
-.hw1 , .hw2, .hw3{
+.hw1 , .hw2, .hw3 , .hw4{
     /*position: absolute;*/
     margin: 131px 70px 0 70px;
     font-family: 'Montserrat', serif;
@@ -21,6 +21,9 @@
 }
 
 .hw3 {
+    margin-top: 20px;
+}
+.hw4 {
     margin-top: 20px;
 }
 
