--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: row-reverse;
     align-items: flex-end;
-    width: 462px;
+    min-width: 250px;
     left: 70px;
 }
 
