--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -13,6 +13,8 @@
 
 .inputAndButtonContainer {
     display: flex;
+    /*width: 372px;*/
+
 }
 
 .error {
@@ -22,9 +24,7 @@
 .input {
     border: 1px solid #D1D1D1;
     padding: 8px 12px;
-}
-input {
-    min-width: 372px;
+    width: 100%;
     height: 36px;
     border-radius: 5px;
     margin: 0 12px 7px 0;
@@ -36,14 +36,24 @@ input:focus {
 
 .input:focus {
     outline: none;
+    /*min-width: 372px;*/
+    height: 36px;
+
+    border-radius: 5px;
+    margin: 0 12px 7px 0;
 }
 
 .errorInput {
     border: 1px solid red;
+    /*min-width: 372px;*/
+    width: 100%;
+    height: 36px;
+    border-radius: 5px;
+    margin: 0 12px 7px 0;
 }
 
 .button {
-    width: 78px;
+    min-width: 78px;
     height: 36px;
     background: #0066CC;
     border-radius: 3px;
@@ -74,4 +84,7 @@ input:focus {
 .greeting {
     margin-top: 3px;
 
+}
+.inputContainer {
+    width: 372px;
 }
