--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -5,7 +5,7 @@
 
 .hw1 , .hw2, .hw3 , .hw4{
     /*position: absolute;*/
-    margin: 131px 70px 0 70px;
+    /*margin: 47px 70px 0 70px;*/
     font-family: 'Montserrat', serif;
     font-style: normal;
     line-height: 20px;
@@ -26,6 +26,11 @@
 .hw4 {
     margin-top: 20px;
 }
+.hw5 {
+    margin: 20px 70px;
+}
+
+
 
 
 .hw {
