--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -43,6 +43,7 @@
     border-bottom: 12px solid #0066CC;
     filter: drop-shadow(2px 1px 1px rgba(29, 33, 38, 0.1));
     transform: rotate(360deg);
+    z-index: -1;
 }
 
 .friendName {
