--- a/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
@@ -16,11 +16,13 @@
 }
 
 .superInput {
+    padding: 10px;
 }
 
 .errorInput {
     border: 1px solid #CC1439;
     border-radius: 5px;
+
 }
 
 .errorInput:focus {
