--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -5,7 +5,7 @@
     height: 100vh;
 }
 
-.hw1 , .hw2, .hw3 , .hw4{
+.hw1 , .hw2, .hw3 , .hw4 , .hw6{
     /*position: absolute;*/
     /*margin: 47px 70px 0 70px;*/
     font-family: 'Montserrat', serif;
@@ -58,4 +58,11 @@
     border: .5px solid #80808042;
     width: 100vw;
     margin-left: -70px;
+}
+
+.boxShadow {
+    width: 100vw;
+    margin-left: -70px;
+    background: #FFFFFF;
+    box-shadow:  -2px 0px 10px 1px #0d0c0c69;
 }
