--- a/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -1,11 +1,27 @@
 .spanBlock {
+    margin: 32px 0 24px 0;
+
 }
 
 .span {
+    color: #0080FF;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+
 }
 
 .input {
+    border: 1px solid #D1D1D1;
+    border-radius: 5px;
+    width: 276px;
+    height: 36px;
+    margin: 24px 0 16px 0;
+    padding: 8px 0 8px 24px;
+
 }
 
 .pen {
+    height: 14px;
+    margin-right: 14px;
 }
