--- a/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
+++ b/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
@@ -1,7 +1,9 @@
 .radio {
+
 }
 
 .radio::before {
+
 }
 
 
@@ -9,7 +11,11 @@
 }
 
 .label {
+    margin: 23px 0 0 0;
+
 }
 
 .options {
+    display: flex;
+    flex-direction: column;
 }
