--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -5,7 +5,7 @@
     height: 100vh;
 }
 
-.hw1 , .hw2, .hw3 , .hw4 , .hw6, .hw7, .h8, .hw9, .hw10{
+.hw1 , .hw2, .hw3 , .hw4 , .hw6, .hw7, .h8, .hw9, .hw10, .hw11{
     /*position: absolute;*/
     /*margin: 47px 70px 0 70px;*/
     font-family: 'Montserrat', serif;
