hw11 slider with css

--- a/src/s2-homeworks/hw11/HW11.module.css
+++ b/src/s2-homeworks/hw11/HW11.module.css
@@ -2,9 +2,18 @@
 }
 
 .wrapper {
+    display: flex;
+    align-items: center;
 }
 
 .number {
+    margin-right: 13px;
+}
+.number2 {
+    margin-left: 13px;
+}
+.range {
+    /*width: 300px;*/
 }
 
 
