--- a/src/s2-homeworks/hw08/HW8.module.css
+++ b/src/s2-homeworks/hw08/HW8.module.css
@@ -35,14 +35,14 @@
 }
 
 .buttonDefault {
-    margin-left: 10px;
+    margin: 10px;
     color: #0066CC;
     background: #FFFFFF;
     border: 1px solid #0066CC;
 }
 
 .buttonActive {
-    margin-right: 10px;
+    margin: 10px;
     background: #0066CC;
     border: 1px solid #0066CC;
     border-radius: 3px;
