--- a/src/s2-homeworks/hw12/HW12.module.css
+++ b/src/s2-homeworks/hw12/HW12.module.css
@@ -14,10 +14,9 @@
 }
 
 html {
-    background-color: var(--background);
+    display: block;
+    position: absolute;
+    background: var(--background);
     color: var(--color);
 }
 
-.select {
-
-}
