--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -9,10 +9,13 @@
 }
 
 .header {
+    padding: 0 20px;
     display: flex;
     justify-content: space-between;
     height: 60px;
     align-items: center;
+    background-color: white;
+    color: black;
 }
 
 .header h1 {
