--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -18,6 +18,8 @@
 }
 
 .sidebar.open {
+    z-index: 100;
+    height: 100%;
 }
 
 .sidebarClose {
@@ -26,7 +28,7 @@
 
 .background {
     position: fixed; /* Stay in place */
-    z-index: 0; /* Sit on top */
+    z-index: 2; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
