--- a/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
@@ -27,15 +27,15 @@ select::-ms-expand {
     --select-arrow: var(--select-border);
 }
 .select {
-    width: 30%;
+    width: 20%;
     border: 1px solid var(--select-border);
     border-radius: 0.25em;
     padding: 0.25em 0.5em;
     font-size: 1.25rem;
     cursor: pointer;
     line-height: 1.1;
-    background-color: #fff;
-    background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
+    background-color: var(--background);
+    color: var(--color);
     display: grid;
     grid-template-areas: "select";
     align-items: center;
