--- a/src/s2-homeworks/hw14/HW14.module.css
+++ b/src/s2-homeworks/hw14/HW14.module.css
@@ -1,7 +1,16 @@
 .tech {
-
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 .loading {
+    color: #4D4D4D;
+    font-weight: 300;
+    font-size: 14px;
 
+}
+
+.container {
+    display: flex;
 }
