--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -5,7 +5,7 @@
     height: 100vh;
 }
 
-.hw1, .hw2, .hw3, .hw4, .hw6, .hw7, .h8, .hw9, .hw10, .hw11, .hw12, .hw13, .hw14 {
+.hw1, .hw2, .hw3, .hw4, .hw6, .hw7, .h8, .hw9, .hw10, .hw11, .hw12, .hw13, .hw14, .hw15 {
     /*position: absolute;*/
     /*margin: 47px 70px 0 70px;*/
     font-family: 'Montserrat', serif;
@@ -38,8 +38,10 @@
 /*}*/
 
 .hw {
+    position: absolute;
     margin-top: 33px;
     margin-bottom: 40px;
+    margin-right: 20px;
     /*width: 1280px;*/
     /*height: 373px;*/
     /*left: 0px;*/
@@ -61,7 +63,8 @@
 .line {
     border: .5px solid #80808042;
     width: 100vw;
-    margin-left: -70px;
+    margin-left: -20px;
+    /*margin-right: -20px;*/
 }
 
 .boxShadow {
