--- a/src/s2-homeworks/hw15/HW15.module.css
+++ b/src/s2-homeworks/hw15/HW15.module.css
@@ -10,18 +10,45 @@
     width: 50vw;
 }
 
+.rowContainer {
+    max-width: 800px;
+}
+
 .developerHeader {
 
 }
 
 .row {
     display: flex;
+    height: 50px;
+    border-top: 1px solid #E5E5E5;
+    align-items: center;
+    padding: 10px;
 }
 
 .rowHeader {
     display: flex;
+    background-color: #E5E5E5;
+    padding: 10px;
 }
 
 .loading {
+    display: block;
+    position: absolute;
+    height: 100%;
+    margin-left: -20px;
+    padding: 0;
+    width: 100vw;
+    background-color: #fafafad6;
+    z-index: 100;
+}
 
+
+.loader {
+    /*свг и/или анимация*/
+    background: url(../../my-loader.svg);
+    width: 100px;
+    height: 100px;
+    position: relative;
+    margin: 100px auto;
 }
