--- a/src/s2-homeworks/hw15/common/c9-SuperPagination/SuperPagination.module.css
+++ b/src/s2-homeworks/hw15/common/c9-SuperPagination/SuperPagination.module.css
@@ -1,11 +1,19 @@
 .pagination {
     display: flex;
+    margin-bottom: 40px;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.select {
+    width: 55px;
+    font-size: inherit;
 }
 
 .text1 {
-
+    margin: 0 10px 0 32px;
 }
 
 .text2 {
-
+    margin-left: 5px;
 }
