changing css position

--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -38,7 +38,7 @@
 /*}*/
 
 .hw {
-    position: absolute;
+    /*position: absolute;*/
     margin-top: 33px;
     margin-bottom: 40px;
     margin-right: 20px;
